--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
+        android:theme="@style/Theme.Pog">
         
         <activity android:name="com.pog.passionfruitOrangeGuava.ui.MainActivity"
             android:label="@string/app_name"
@@ -18,6 +18,12 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Pog"
             android:windowSoftInputMode="adjustPan">
+
+            <nav-graph android:value="@navigation/main_navigation"/>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 </manifest>
