--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
     }
 
     buildFeatures {
+        viewBinding true
         dataBinding true
     }
 
@@ -49,6 +50,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.3.6"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation "com.squareup.picasso:picasso:2.71828"
 
     //LifeCycle
     implementation 'androidx.lifecycle:lifecycle-common:2.3.1'
